packages/cjs-to-esm/test/snapshots/package-corpus/core-js/actual/error/index.js
import parent from "../../stable/error";
import "../../modules/es.object.create";
import "../../modules/esnext.error.is-error";
const _cjs_default = parent;
export default _cjs_default;
